--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-dev-server": "^3.8.2",
+    "serialize-javascript": ">=2.1.1"
   }
 }
