--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lesson10",
+  "name": "weekbin",
   "version": "1.0.0",
-  "description": "",
+  "description": "automated news service",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --debug --watch --config webpack.config.js"
@@ -12,11 +12,12 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "babel-loader": "^8.0.6",
+    "core-util-is": "^1.0.2",
     "newsapi": "^2.4.0",
     "react": "^16.12.0",
+    "serialize-javascript": ">=2.1.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
-    "serialize-javascript": ">=2.1.1"
+    "webpack-dev-server": "^3.8.2"
   }
 }
