--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "automated news service",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --debug --watch --config webpack.config.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
