--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "weekbin",
-  "version": "1.0.0",
-  "description": "automated news service",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "webpack-dev-server --debug --watch --config webpack.config.js"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "babel-loader": "^8.0.6",
-    "core-util-is": "^1.0.2",
-    "newsapi": "^2.4.0",
-    "react": "^16.12.0",
-    "serialize-javascript": ">=2.1.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "node-sass-middleware": "0.11.0"
   }
 }
